--- a/style1.css
+++ b/style1.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  outline: 1px solid red;
+  /*outline: 1px solid red;*/
 }
 
 body {
@@ -58,7 +58,7 @@ h1 {
 
 h2 {text-align: center;
   background-color: #2B3499;
-  color: #f89233;
+  color: #ffffff;
   padding: 30px;
   font-size:40px;
 }
@@ -77,7 +77,7 @@ h2 {text-align: center;
 .contenedor-cuerpo{
   display: flex;
   flex-wrap: wrap;
-  background-color: #FFE2BC;
+  background-color: #ffffff;
   height: 100%;
   width:100%;
   padding: 10px;
@@ -118,7 +118,7 @@ footer{
 }
 
 h4{
-  color: #FF9209;
+  color: #ffffff;
 }
 
 .contenedor-imgs{
@@ -130,14 +130,12 @@ h4{
 }
 
 .fotos{
-  
-  
   justify-content: space-between;
   width: 300px;
 }
 
 ol {
-  border: 1px solid #ccc;
+  /*border: 1px solid #ccc;*/
   padding: 10px;
 }
 
@@ -150,20 +148,19 @@ ul {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  background-color: #FFE2BC;
+  background-color: #ffffff;
   width: 75%;
   height: 450px;
-}
-
-#contenedor-contenedor{
-  background-color: #FFD099;
-  display:inline;
 }
 
 #fonemail{
   position: absolute;
   left: 22.4vw;
   bottom: 30vh;
+}
+
+#cap{
+  text-decoration: underline;
 }
 
 table,th,tr,td{
@@ -173,13 +170,13 @@ table,th,tr,td{
 }
 
 th{
-  background-color: rgb(160, 64, 96);
+  background-color: rgb(245, 209, 8);
 }
 
 tfoot{
-  background-color: rgb(204, 155, 48);
+  background-color: rgb(173, 152, 106);
 }
 
 tbody tr,td:hover{
-  background-color: rgb(204, 155, 48);
+  background-color: rgb(173, 152, 106);
 }
