Add missing opening <p> tag in rules.html
The <p> tag was missing in the rules.html file, causing a formatting issue.
Added the opening <p> tag to ensure proper display of content.

--- a/style1.css
+++ b/style1.css
@@ -95,6 +95,7 @@ h3{
 
 .parraf{
   height: 100px;
+  margin-top: 20px;
 }
 
 #abcd{
@@ -155,8 +156,8 @@ ul {
 
 #fonemail{
   position: absolute;
-  left: 22.4vw;
-  bottom: 30vh;
+  left: 23.4vw;
+  bottom: 16vh;
 }
 
 #cap{
@@ -174,9 +175,9 @@ th{
 }
 
 tfoot{
-  background-color: rgb(173, 152, 106);
+  background-color:antiquewhite;
 }
 
 tbody tr,td:hover{
-  background-color: rgb(173, 152, 106);
+  background-color: antiquewhite;
 }
